--- a/views/list.ejs
+++ b/views/list.ejs
@@ -6,13 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do List</title>
 </head>
+
 <body>
+
    <h1> <%= kindOfDay %> </h1>
 
    <ul> 
-    <li>Buy Food</li>
-    <li>Cook Food</li>
-    <li>Eat Food</li>
+    <!-- For loop function renders thru array and add new list items -->
+    <% for (var i=0; i<newListItems.length; i++) { %>
+    <li><%= newListItems[i]  %></li>
+    <% } %>
+
    </ul>
 
    <form class="" action="/" method="post">
@@ -20,7 +24,7 @@
     <input type="text" name="newItem">
 
     <button type="submit" name="button">Add</button> 
-    
+
    </form>
    
    
