--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do List</title>
+    <link rel="stylesheet" href="css/styles.css"/>
+    
 </head>
 
 <body>
+    <div class="box" id="heading">
+        <h1> <%= kindOfDay %> </h1>
 
-   <h1> <%= kindOfDay %> </h1>
+    </div>
 
-   <ul> 
-    <!-- For loop function renders thru array and add new list items -->
-    <% for (var i=0; i<newListItems.length; i++) { %>
-    <li><%= newListItems[i]  %></li>
-    <% } %>
+  
+    <div class="box">
+        <!-- For loop function renders thru array and add new list items -->
+        <% for (var i=0; i<newListItems.length; i++) { %>
+            <div class="item">
+                <input type="checkbox">
+             <p><%= newListItems[i] %></p> 
+            </div>
+        <% } %>
 
-   </ul>
+        <form class="item" action="/" method="post">
+            <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
+            <button type="submit" name="button">+</button> 
+           </form>
+    </div>
 
-   <form class="" action="/" method="post">
 
-    <input type="text" name="newItem">
-
-    <button type="submit" name="button">Add</button> 
-
-   </form>
-   
-   
 </body>
 </html>
